--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,104 @@ code {
   background-color: yellow;
   color: red;
 }
+
+.button-wrapper {
+  display: flex;
+  justify-content: space-around;
+}
+
+.days-rest-button {
+  padding: 5px 10px;
+  background-color: mistyrose;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  padding: 15px 32px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.days-rest-button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.days-rest-button:focus {
+  background-color: antiquewhite;
+}
+
+.days-rest-span {
+  display: block;
+  font-size: calc(16px + (24 - 16) * (100vw - 400px) / (1600 - 400));
+}
+
+.days-rest-header {
+  margin-bottom: 1.5rem;
+}
+
+.loader-wrapper {
+  position: relative;
+}
+
+.loader,
+.loader:before,
+.loader:after {
+  background: rgb(62, 62, 123);
+  -webkit-animation: load1 1s infinite ease-in-out;
+  animation: load1 1s infinite ease-in-out;
+  width: 1em;
+  height: 4em;
+}
+.loader {
+  color: rgb(62, 62, 123);
+  text-indent: -9999em;
+  margin: 88px auto;
+  position: relative;
+  font-size: 11px;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+  position: absolute;
+  top: 0;
+  content: "";
+}
+.loader:before {
+  left: -1.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 1.5em;
+}
+
+.record {
+  font-size: 26px;
+  display: block;
+}
+@-webkit-keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
+}
+@keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
+}
